--- a/duffing/index.html
+++ b/duffing/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>tree</title>
+	<title>duffing</title>
 	<script src="p5.min.js"></script>
-	<script src="tree.js"></script>
 	<script src="main.js"></script>
 </head>
 <body>
