--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 	<title>Journal</title>
 	<meta name=viewport content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
+  <script defer src="data.js" type="text/javascript"></script>
+  <script defer src="bundle.js" type="text/javascript"></script>
 </head>
 <body>
 <div id="root"></div>
-<script src="bundle.js"></script>
 </body>
 </html>
